[gd_scene load_steps=3 format=2]

[ext_resource path="res://Meteor.gd" type="Script" id=4]

[sub_resource type="CircleShape2D" id=2]
radius = 56.0089

[node name="Meteor" type="Area2D"]
script = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 2 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Meteor_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Meteor_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
